# SuperNEMO-LazarusModule

./: CMakeLists.txt  LazarusModule.conf.in  LazarusModule.cpp  LazarusModule.h  MLResurrection.cpp  MLResurrection.h  MLResurrectionModule.conf.in  README.md  answers.txt  column.txt  fdeep_model_scce_half.json  generate_known_dc.py  layer.txt  list_shorts.txt  official-2.0.0_noCAT.conf  plot_results.py  side.txt
scripts/: plot_efficiency.py
